--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,10 @@
 name: uBO release
 
-on: workflow_dispatch
+on:
+  push:
+    paths-ignore:
+      - '.github/*'
+      - '*.md'
 
 permissions:
   contents: read
